objects/Fund__c.object
<CustomObject>
    <description>To store information about different funds, including details on available funds and fund sources.</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(
AND( StartDate__c &lt;= TODAY(),
TODAY() &lt;= EndDate__c ),
true,
false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundsMigrationReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>Funds Migration Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDGrantType__c</fullName>
        <label>HUD Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>MMMSA</fullName>
                </value>
                <value>
                    <fullName>Colonias</fullName>
                </value>
                <value>
                    <fullName>HECM</fullName>
                </value>
                <value>
                    <fullName>S8</fullName>
                </value>
                <value>
                    <fullName>Predatory Lending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HUDNOFA__c</fullName>
        <inlineHelpText>If this grant is funded by HUD select the corresponding NOFA to be reported on the HUD 9902.</inlineHelpText>
        <label>HUD NOFA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOFA 2014-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2015-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2016-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2017-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2018-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2019-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2020-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2021-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2022-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2023-1 COMP</fullName>
                </value>
                <value>
                    <fullName>NOFA 2022 TBD</fullName>
                    <isActive>false</isActive>
                    <label>NOFA 2022 TBD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalGrantAmount__c</fullName>
        <label>Total Grant Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>